@@ -15,6 +15,41 @@
 # write to the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
+class Gdk::Pixbuf
+    def tag(tag_pixbuf)
+        # Computes some tweaks.
+        tweak_x = tag_pixbuf.width / 3 
+        tweak_y = tag_pixbuf.height / 3
+        
+        # Creates the destination pixbuf.
+        new_pixbuf = Gdk::Pixbuf.new(Gdk::Pixbuf::COLORSPACE_RGB,
+                                     true, 
+                                     8, 
+                                     self.width + tweak_x,
+                                     self.height + tweak_y)
+
+        # Fills with blank.
+        new_pixbuf.fill!(0)
+
+        # Copies the current pixbuf there (south-west).
+        self.copy_area(0, 0, 
+                       self.width, self.height,
+                       new_pixbuf,
+                       0, tweak_y)
+
+        # Copies the tag pixbuf there (north-est).
+        tag_pixbuf_x = self.width - (tweak_x * 2)
+        new_pixbuf.composite!(tag_pixbuf, 
+                              0, 0, 
+                              tag_pixbuf.width + tag_pixbuf_x,
+                              tag_pixbuf.height,
+                              tag_pixbuf_x, 0, 
+                              1, 1, 
+                              Gdk::Pixbuf::INTERP_HYPER, 255)
+        return new_pixbuf
+    end
+end
+
 module Alexandria
 module UI
     module Icons
